--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Super_Stack)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Super_Stack main.cpp Super_Stack_Library.h)
+add_executable(Super_Stack main.cpp Super_Stack_Library.h Unit_Test.h)
